--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 
 <body>
     <div class="app">
-        <h1>PhoneGap</h1>
+        <h1>RoboPet</h1>
         <div id="deviceready" class="blink">
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
@@ -55,8 +55,6 @@
     <script type="text/javascript">
         app.initialize();
     </script>
-
-<a href="http://www.google.com/calendar/event?action=TEMPLATE&text=Example%20Event&dates=20131124T010000Z/20131124T020000Z&details=Event%20Details%20Here&location=123%20Main%20St%2C%20Example%2C%20NY">Add to gCal</a>
 </body>
 
 </html>
